Preliminary support for installing WO 5.5 Fixed jar naming inconsistency of woinstall vs WOInstaller Misc fixes in MultiBlockInputStream